# meta-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml  pytest.ini  run_tests.py  test_mcp_client.py
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-22-scalpel-refactor.md
docs/superpowers/specs/: 2026-03-22-meta-mcp-scalpel-refactor-design.md
scripts/: install.ps1  install.sh
src/meta_mcp/: __init__.py  __main__.py  _parsing.py  ai_fallback.py  capability_stack.py  cli.py  clients.py  config.py  discovery.py  gateway.py  gateway_registry.py  installer.py  integration_manager.py  intent.py  logging_manager.py  memory.py  models.py  orchestration.py  project.py  project_init.py  registry.py  server.py  server_definitions.json  server_definitions_enhanced.json  settings.py  skill_repo.py  skills.py  tools.py  tools_base.py  verification.py
src/meta_mcp/profiles/: __init__.py  default.yaml
tests/: conftest.py  test_capability_stack.py  test_clients.py  test_gateway.py  test_intent.py  test_memory.py  test_orchestration.py  test_profiles.py  test_project.py  test_project_init.py  test_registry.py  test_skills.py  test_stdio_transport.py  test_tool_schema.py  test_verification.py
